--- a/index.html
+++ b/index.html
@@ -1,77 +1,69 @@
-<!DOCTYPE html>
-<html lang="pl_PL">
+<!doctype html>
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>ToDoListApp</title>
-  <meta name="description" content="ToDoListApp | Lista to do ">
-  <meta name="keywords" content="ToDoListApp, application, ToDo">
-  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-  <link href="https://fonts.googleapis.com/css?family=Didact+Gothic|Lato:400,700&subset=latin-ext" rel="stylesheet">
-  <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-  <link rel="stylesheet" href="main.css" type="text/css">
-  <script src="https://kit.fontawesome.com/9b2aac655c.js" crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-    integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
-  </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-    integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
-  </script>
-  <script src="script.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/9b2aac655c.js" crossorigin="anonymous"></script>
+
+    <title>ToDoList</title>
+    <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <div class="main">
-    <div class="header">
-      <div class="logo">ToDoListApp</div>
-      <div class="login"><span class="fa fa-user"></span>LOG IN</div>
-    </div>
-    <div class="underline"></div>
-
-    <div class="container">
-      <center>
-        <div class="middle">
-          <div id="login">
-
-            <form action="javascript:void(0);" method="get">
-
-              <fieldset class="clearfix">
-
-                <p><span class="fa fa-user"></span><input type="text" Placeholder="Username" required></p>
-                <!-- JS because of IE support; better: placeholder="Username" -->
-                <p><span class="fa fa-lock"></span><input type="password" Placeholder="Password" required></p>
-                <!-- JS because of IE support; better: placeholder="Password" -->
-
-                <div>
-                  <span style="width:30%; text-align:left;  display: inline-block;"><input type="submit"
-                      value="Sign In"></span>
-
-                  <span style="width:68%; text-align:right;  display: inline-block;"><a class="small-text"
-                      href="#">Register new account</a></span>
-                </div>
-
-              </fieldset>
-              <div class="clearfix"></div>
-            </form>
-
-            <div class="clearfix"></div>
-
-          </div> <!-- end login -->
+    <div class="main">
+        <div class="header">
+            <div class="logo">ToDoListApp</div>
+            <div class="login"><span class="fa fa-user"></span>LOG IN</div>
         </div>
-      </center>
+        <div class="underline"></div>
+
+        <div class="container">
+            <center>
+                <div class="middle">
+                    <div id="login">
+
+                        <form action="javascript:void(0);" method="get">
+
+                            <fieldset class="clearfix">
+
+                                <p><span class="fa fa-user"></span><input type="text" Placeholder="Username" required>
+                                </p>
+                                <!-- JS because of IE support; better: placeholder="Username" -->
+                                <p><span class="fa fa-lock"></span><input type="password" Placeholder="Password"
+                                        required></p>
+                                <!-- JS because of IE support; better: placeholder="Password" -->
+
+                                <div>
+                                    <span style="width:30%; text-align:left;  display: inline-block;"><input
+                                            type="submit" value="Sign In"></span>
+
+                                    <span style="width:68%; text-align:right;  display: inline-block;"><a
+                                            class="small-text" href="#">Register new account</a></span>
+                                </div>
+
+                            </fieldset>
+                            <div class="clearfix"></div>
+                        </form>
+
+                        <div class="clearfix"></div>
+
+                    </div> <!-- end login -->
+                </div>
+            </center>
+        </div>
     </div>
-  </div>
-
-
-
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
