--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                                             type="submit" value="Sign In"></span>
 
                                     <span style="width:68%; text-align:right;  display: inline-block;"><a
-                                            class="small-text" href="#">Register new account</a></span>
+                                            class="small-text" href="registration.html">Register new account</a></span>
                                 </div>
 
                             </fieldset>
