--- a/TO DO main page/index.html
+++ b/TO DO main page/index.html
@@ -79,8 +79,37 @@
             <i onclick="removeBox3()" class="fas fa-trash-alt fa-2x"></i>
         <hr>
       </div>
+      <div class="boxNext1 disappearance2"></div>
+      <div class="boxNext2 disappearance2"></div>
+      <div class="boxNext3 disappearance2"></div>
+      <div class="boxNext4 disappearance2"></div>
+      <div class="boxNext5 disappearance2"></div>
+      <div class="boxNext6 disappearance2"></div>
+      <div class="boxNext7 disappearance2"></div>
+      <div class="boxNext8 disappearance2"></div>
+      <div class="boxNext9 disappearance2"></div>
+      <div class="boxNext10 disappearance2"></div>
+      <div class="boxNext11 disappearance2"></div>
+      <!-- BOX "next"-->
+      <div id="nextList" class="box disappearance">
+        <div class="title">
+          <h3>Nex list</h3>
+        </div>
+        <div class="content">
+          <hr>
+          <ul id="myUL4">
+            <li>sample</li>
+          </ul>
+        </div>
+        <hr>
+        <input type="text" id="nextLi" placeholder="">
+        <span onclick="newElementBox4()" class="addBtn"><i class="fas fa-plus fa-2x"></i></span>
+        <i onclick="removeBox4()" class="fas fa-trash-alt fa-2x"></i>
+        <hr>
+      </div>
     </div>
     <hr>
+    
     <!--FOOTER-->
   <div id="footer">
       ||Monika, Wiktoria, Michał i Szymon for CodersCamp2019||
