--- a/TO DO main page/index.html
+++ b/TO DO main page/index.html
@@ -29,6 +29,7 @@
   </div>
     </nav>
     <div id="under_menu"> YOUR TASKS... </div>
+    <div><button class="addList">Add List </button></div>
     <!--BOXES FIELD-->
     <hr> 
     <div id="boxes_field"> 
