--- a/TO DO main page/index.html
+++ b/TO DO main page/index.html
@@ -28,8 +28,9 @@
         <div id="log-out"><i class="fas fa-power-off"></i><span> Log out... </span></div>
   </div>
     </nav>
-    <div id="under_menu"> YOUR TASKS... </div>
-    <div><button class="addList">Add List </button></div>
+    <div id="under_menu"> 
+      <div><button class="addList">+ Add List </button></div>
+  </div>
     <!--BOXES FIELD-->
     <hr> 
     <div id="boxes_field"> 
@@ -94,7 +95,7 @@
       <!-- BOX "next"-->
       <div id="nextList" class="box disappearance">
         <div class="title">
-          <h3>Nex list</h3>
+          <h3>New list</h3>
         </div>
         <div class="content">
           <hr>
